Use Debian packaged jQuery

--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="/static/jquery-1.11.1.min.js"></script>
+<script type="text/javascript" src="/static/jquery.js"></script>
 <script type="text/javascript" src="/static/cell.js"></script>
 <script type="text/javascript" src="/static/screen.js"></script>
 <script type="text/javascript" src="/static/wsterm.js"></script>
